Fix overflow and header styles in navbar

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -50,6 +50,8 @@ body {
 
 main {
   z-index: 1;
+  overflow-x: hidden;
+  position: relative;
 }
 
 .active {
